[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/MenuBackground.png" type="Texture" id=2]
[ext_resource path="res://DiloWorld-mLJLv.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Menu" type="Control"]
margin_right = 1024.0
margin_bottom = 576.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 576.0
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 384.0
margin_top = 192.0
margin_right = 640.0
margin_bottom = 576.0
alignment = 1

[node name="Choose level" type="Button" parent="VBoxContainer"]
margin_top = 134.0
margin_right = 256.0
margin_bottom = 154.0
focus_neighbour_top = NodePath("../Quit")
text = "Choose Level"

[node name="High Score" type="Button" parent="VBoxContainer"]
margin_top = 158.0
margin_right = 256.0
margin_bottom = 178.0
text = "High Score"

[node name="Tutorial" type="Button" parent="VBoxContainer"]
margin_top = 182.0
margin_right = 256.0
margin_bottom = 202.0
text = "Tutorial"

[node name="Setting" type="Button" parent="VBoxContainer"]
margin_top = 206.0
margin_right = 256.0
margin_bottom = 226.0
text = "Setting"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 230.0
margin_right = 256.0
margin_bottom = 250.0
focus_neighbour_bottom = NodePath("../Choose level")
text = "Quit"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 208.0
margin_top = 96.0
margin_right = 816.0
margin_bottom = 320.0
custom_colors/default_color = Color( 0.898039, 0.92549, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = " DUNGEON
		ESCAPER"

[connection signal="pressed" from="VBoxContainer/Choose level" to="." method="_on_Choose_level_pressed"]
[connection signal="pressed" from="VBoxContainer/High Score" to="." method="_on_High_Score_pressed"]
[connection signal="pressed" from="VBoxContainer/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer/Setting" to="." method="_on_Setting_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
